--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,20 @@ body {
     margin-left: 30px;
 }
 
+.box {
+    background-color: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 1px;
+    padding: 10px 0;
+    margin: 0 0 10px;
+}
+
+.brand-name-img {
+    background-position: 0 0;
+    height: 51px;
+    width: 175px;
+}
+
 .landing-left {
     .dummy-phone {
         background-image: image-url("dummy-phone-2x.png");
@@ -72,6 +86,33 @@ body {
 
         .item {
             position: absolute;
+        }
+    }
+}
+
+.landing-right {
+    .form-login {
+        width: 350px;
+
+        form {
+            padding: 0 40px;
+
+            .btn-primary {
+                width: 100%;
+                line-height: 14px;
+                font-size: 14px;
+                font-weight: 600;
+            }
+
+            input {
+                border: 1px solid #efefef;
+            }
+
+            .form-check-label {
+                padding: 0;
+                font-size: 15px;
+                color: #262626;
+            }
         }
     }
 }
