--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -114,5 +114,13 @@ body {
                 color: #262626;
             }
         }
+
+        .brand-name-img {
+            margin: 22px auto 8px;
+        }
+    }
+
+    .redirect-links {
+        width: 350px;
     }
 }
