--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,3 +124,9 @@ body {
         width: 350px;
     }
 }
+
+footer .nav-item {
+    color: #003569;
+    font-size: 12px;
+    font-weight: bold;
+}
