--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,6 +3,7 @@
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= "Don't have an account?" %>
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end %>
 
