--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,47 +6,42 @@
     <div class="col-lg-6 landing-right text-center d-flex align-items-center">
       <div>
         <div class="form-login box">
-        <h2 class="core-sprite brand-name-img"></h2>
-        <h5 class="light-color"><strong>Sign up to see photos and <br> videos from your friends.</strong></h5>
+          <h2 class="core-sprite brand-name-img"></h2>
+          <h5 class="light-color"><strong>Sign up to see photos and <br> videos from your friends.</strong></h5>
 
-        <hr>
+          <hr>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-          <div class="form-group">
-            <%= f.label :username %><br />
-            <%= f.text_field :username, autofocus: true, placeholder: "Your name", class: "form-control" %>
-          </div>
+            <div class="form-group">
+              <%= f.text_field :name, autofocus: true, placeholder: "Your name", class: "form-control" %>
+            </div>
 
-          <div class="form-group">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
-          </div>
+            <div class="form-group">
+              <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-control" %>
+            </div>
 
-          <div class="field">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password" %>
-          </div>
+            <div class="form-group">
+              <%= f.password_field :password, autocomplete: "off", placeholder: "Password", class: "form-control" %>
+            </div>
 
-          <div class="field">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation", class: "form-control" %>
-          </div>
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password confirmation", class: "form-control" %>
+            </div>
 
-          <div class="actions">
-            <%= f.submit "Sign up", class: "btn btn-primary" %>
-          </div>
-        <% end %>
+            <div class="actions">
+              <%= f.submit "Sign up", class: "btn btn-primary" %>
+            </div>
+          <% end %>
 
-        <br>
+          <br>
 
-        <p class="light-color">By signing up, you agree to our <br><strong>Term &amp; Privacy Policy.</strong></p>
+          <p class="light-color">By signing up, you agree to our <br><strong>Term &amp; Privacy Policy.</strong></p>
+        </div>
 
-        <%= render "devise/shared/links" %>
+        <div class="redirect-links box">
+          <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
