--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,14 @@
     <p class="alert"><%= alert %></p>
     <%= yield %>
     <%= render 'shared/footer' %>
+
+    <% if flash.any? %>
+      <script type="text/javascript">
+          <% flash.each do |key, value| %>
+            <% type = key.to_s.gsub('alert', 'error').gsub('notice', 'success') %>
+            toastr.<%= type %>('<%= value %>')
+          <% end %>
+      </script>
+    <% end %>
   </body>
 </html>
