--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
     <%= render 'shared/flash_messages'%>
     <!--<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>-->
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render 'shared/footer' %>
 
     <% if flash.any? %>
